# ECOv003-L1

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README.md  Setup.md  aclocal.m4  common.am  configure  configure.ac  ecostress.am  ecostress_version.py.in  include.am  l0b_sim.py  l1a_raw_pix_generate.py  requirements.txt
config/: doxygen.cfg  doxygen_single.cfg
coreg_test/: README.md
docker/: BuildDocker_directions.txt  README  docker.am
docker-env/: .gitignore  Makefile  Makefile.local  README.md  env_makefile.local
end_to_end_testing/: .gitignore  Create IGC.ipynb  FPA distortion20140522.README  FPA distortion20140522.xlsx  FPA distortion20180208.README  FPA distortion20180208.xlsx  Makefile  README.md  Ray Caster.ipynb  cam_paraxial.xml  cam_paraxial_20180208.xml  camera.xml  camera_20140522.xml  camera_20180208.xml  camera_20250619.xml  camera_old.xml  compare_test.sh  create_end_to_end_test_data.py  create_end_to_end_test_data_glynn.py  diff_end_to_end_sba.py  diff_sba.py  ecostress_camera_generate.py  extra_python_init.py  fit_cam_band_to_band.py  igccol_truth.xml  iss_orbit_determine.py  iss_time.json  multipolyfit.py  orbit.xml  orbit_old.xml  run_end_to_end.sh  run_end_to_end_glynn.sh  time_table.xml  time_test.py
env/: .gitignore  Makefile  README.md  ecostress_environment_fixed.yml  ecostress_environment_latest.yml  pixi.toml  run-post-link.sh
l1a_cal/: L1A_CAL_PGE  l1a_cal.am  l1a_cal_pge  l1a_cal_process
l1a_raw/: L1A_RAW_PGE  l0b_scan.py  l1a_raw.am  l1a_raw_pge  l1a_raw_process
l1b_geo/: L1B_GEO_PGE  ecostress_util  kmz_combine  l1b_geo.am  l1b_geo_pge  l1b_geo_process  l1b_orthobase  l1b_project  map_index  map_product  map_to_gdal  map_to_kmz  qa_import  qa_info
l1b_rad/: L1B_RAD_PGE  README.md  disp_l1rad  dqi_summary  l1b_rad.am  l1b_rad_pge  l1b_rad_process
l1c/: L1C_PGE  README_sentinel_tile.md  S2_TilingSystem2-1.txt  l1c.am  l1c_process  sentinel_ingest.py
l2c/: L2C_PGE  l2c.am  l2c_process
l2t/: L2T_PGE  l2t.am  l2t_process
lib/: coordinate_convert.cc  coordinate_convert.h  coordinate_convert.i  ecostress_band_to_band.cc  ecostress_band_to_band.h  ecostress_band_to_band.i  ecostress_camera.cc  (+83 more)
python/: Makefile  conftest.py  from_source_test.py  from_source_testnotworking.py  l1b_geo_generate.pickle  pyproject.toml  pytest.ini  python.am  setup.py  test.sh
python/ecostress/: README  __init__.py  browse_image.py  cloud_mask.py  cloud_processing.py  coordinate_system.py  distance_to_missing_scanline.py  ecostress_igc_extension.py  ecostress_interpolate.py  ecostress_interpolate_knn_window.py  ecostress_interpolate_new.py  ecostress_interpolate_old.py  ecostress_interpolate_test.py  exception.py  fileio.py  gaussian_stretch.py  geo_write_standard_metadata.py  l0b_sim.py  l1a_bb_simulate.py  l1a_eng_simulate.py  l1a_pix_generate.py  l1a_pix_simulate.py  l1a_raw_att_simulate.py  l1a_raw_pix_generate.py  l1a_raw_pix_simulate.py  l1b_att_generate.py  l1b_geo_generate.py  l1b_geo_generate_kmz.py  l1b_geo_generate_map.py  l1b_geo_process.py  l1b_geo_qa_file.py  l1b_geo_strategy.py  l1b_proj.py  l1b_rad_generate.py  l1b_rad_simulate.py  l1b_tp_collect.py  l1cg_generate.py  l1cg_write_standard_metadata.py  l1ct_generate.py  l1ct_write_standard_metadata.py  (+10 more)
python/init/: __init__.py
python/lib/: __init__.py  band_to_band_test.py  coordinate_system_test.py  cython_sample.pyx  cython_sample2.pyx  cython_sample_test.py  cython_try.py  distance_to_missing_scanline.py  dummy.py  dummy_test.py  ecostress_camera_test.py  ecostress_igc_extension.py  ecostress_igc_extension_test.py  ecostress_interpolate.py  ev_codes.txt  exception.py  geo_write_standard_metadata.py  igc_test.py  l0_simulate.py  l0_simulate_test.py  l0b_sim.py  l0b_sim_test.py  l1a_bb_simulate.py  l1a_bb_simulate_test.py  l1a_eng_simulate.py  l1a_eng_simulate_test.py  l1a_pix_generate.py  l1a_pix_generate_test.py  l1a_pix_simulate.py  l1a_pix_simulate_test.py  l1a_raw_att_simulate.py  l1a_raw_att_simulate_test.py  l1a_raw_pix_generate.py  l1a_raw_pix_generate_test.py  l1a_raw_pix_simulate.py  l1a_raw_pix_simulate_test.py  l1b_att_generate.py  l1b_att_generate_test.py  l1b_geo_generate.py  l1b_geo_generate_kmz.py  (+25 more)
python/pytest_tmp/test_write_standard_metadata0/: f2_metadata.h5  f_metadata.h5
python/test/: conftest.py  ecostress_interpolate_old_test.py
python/test/fixtures/: dir_fixture.py  igc_fixture.py  misc_fixture.py
python/test/simulate/: README.md  l1a_eng_simulate_test.py  l1b_rad_simulate_test.py
python/test/test_support/: test_support.py
python/test/unit/: band_to_band_test.py  browse_image_test.py  cloud_processing_test.py  coordinate_system_test.py  ecostress_camera_test.py  ecostress_igc_extension_test.py  ecostress_interpolate_old_test.py  ecostress_interpolate_test.py  gaussian_stretch_test.py  geo_write_standard_metadata_test.py  igc_test.py  l1a_bb_simulate_test.py  l1a_eng_simulate_test.py  l1a_pix_generate_test.py  l1a_pix_simulate_test.py  l1b_att_generate_test.py  l1b_geo_generate_kmz_test.py  l1b_geo_generate_map_test.py  l1b_geo_generate_test.py  l1b_geo_process_test.py  l1b_geo_qa_file_test.py  l1b_proj_test.py  l1b_rad_generate_test.py  l1b_rad_simulate_test.py  l1cg_generate_test.py  l1ct_generate_test.py  l2ct_generate_test.py  misc_test.py  rad_write_standard_metadata_test.py  run_config_test.py  write_run_config_test.py  write_standard_metadata_test.py
python/test_support/: test_support.py
python/tests/: conftest.py  pytest.ini
python/tests/fixtures/: dir_fixture.py  igc_fixture.py
python/tests/interpolate/: README.md  ecostress_interpolate_KNN_WINDOW_dev.py
python/tests/simulate/: l1a_pix_simulate_test.py  l1a_raw_att_simulate_test.py  l1a_raw_pix_simulate_test.py  l1b_rad_simulate_test.py
python/tests/unit/: band_to_band_test.py  cloud_mask_test.py  ecostress_camera_test.py  ecostress_interpolate_test.py  geo_write_standard_metadata_test.py  l0b_sim_test.py  l1a_raw_pix_generate_test.py  l1b_att_generate_test.py  l1b_geo_generate_test.py  l1b_geo_process_test.py  l1b_geo_qa_file_test.py  l1b_rad_generate_test.py
(+176 files in other folders)
